--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
+    line-height: 1.667em;
+    font-weight: 400;
+    color: #383838;
+    background-color: #f7f3f0;
+    overflow-x: hidden;
+    -webkit-font-smoothing: antialiased;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    font-family: Oswald, sans-serif;
+    font-size: 72px;
+    line-height: 1.146em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+    font-family: Oswald, sans-serif;
+    font-size: 48px;
+    line-height: 1.146em;
+    text-transform: uppercase;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn {
+    border-radius: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-main {
+    background-color: #c74817;
+    color: #FFF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-main:hover {
+    background-color: #b73604;
+    color: #FFF;
 }
